# halo2-email-wallet

./: Cargo.toml  README.md
src/: circuits.rs  lib.rs  poseidon_chip.rs
src/circuits/: mod.rs  poseidon_chip.rs  sender.rs  utils.rs
